force-app/main/default/objects/Invoice__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <label>Service Period Start</label>
    <type>Date</type>
</CustomField>