force-app/main/default/objects/Invoice__c/fields/InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceType__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Invoice</fullName>
            </value>
            <value>
                <fullName>Household Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>