force-app/main/default/objects/Invoice__c/fields/PDF_File_Id__c.field-meta.xml
<CustomField>
    <fullName>PDF_File_Id__c</fullName>
    <label>PDF File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>