force-app/main/default/objects/Invoice__c/fields/PDFGeneratedDate__c.field-meta.xml
<CustomField>
    <fullName>PDFGeneratedDate__c</fullName>
    <label>PDF Generated Date</label>
    <type>DateTime</type>
</CustomField>