force-app/main/default/objects/Invoice__c/fields/Primary_Client__c.field-meta.xml
<CustomField>
    <fullName>Primary_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Primary_Client)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>