force-app/main/default/objects/Invoice__c/fields/SuperBillPatientGroup__c.field-meta.xml
<CustomField>
    <fullName>SuperBillPatientGroup__c</fullName>
    <label>Super Bill Patient Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>