force-app/main/default/objects/Invoice__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <label>Service Period End</label>
    <type>Date</type>
</CustomField>