force-app/main/default/objects/Invoice__c/validationRules/Cannot_Update_once_Created.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_once_Created</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
    <errorMessage>This record cannot be edited after creation.</errorMessage>
</ValidationRule>