force-app/main/default/objects/Invoice__c/listViews/Standard_Invoices.listView-meta.xml
<ListView>
    <fullName>Standard_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>InvoiceType__c</columns>
    <columns>Invoice_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InvoiceType__c</field>
        <operation>equals</operation>
        <value>Standard Invoice</value>
    </filters>
    <label>Standard Invoices</label>
</ListView>