force-app/main/default/objects/Invoice__c/listViews/Super_Bill_Invoices.listView-meta.xml
<ListView>
    <fullName>Super_Bill_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Primary_Client__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>InvoiceType__c</columns>
    <columns>Invoice_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>InvoiceType__c</field>
        <operation>equals</operation>
        <value>Household Invoice</value>
    </filters>
    <label>Household Invoices</label>
</ListView>